# Zumrad

./: .gitignore  README.md  commands.py  config.yaml  pyproject.toml  run.py
silero_models_utils/: latest_silero_models.yml  silero_models.py
test/: test_main_a.py  test_main_b.py  test_main_c.py
test/core/: test_voice_assistant.py
test/services/stt/: test_simple_stt.py  test_speech_recognizer.py
test/tts_implemintations/: test_asilero_tts.py  test_async_tts.py
zumrad_iis/: config.py  main.py
zumrad_iis/commands/: command_processor.py  command_vocabulary.py
zumrad_iis/commands/handlers/: process_commands.py  system_commands.py
zumrad_iis/commands/register/: attention_one.py  repeat_phrases.py  speak.py  what_time_is_it.py
zumrad_iis/core/: tts_interface.py
zumrad_iis/services/: activation_service.py  audio_feedback_service.py  audio_input_service.py  avosk_stt.py  command_service.py  external_process_service.py
zumrad_iis/services/stt/: speech_recognizer.py  test_simple_stt.py
zumrad_iis/tts_implementations/: asilero_tts.py  async_silero_tts.py
