# zumrad/pyproject.toml
#
# Менеджер зависимостей Poetry.
# 
# Установка Poetry (официальный установщик)(рекомендованно):
# curl -sSL https://install.python-poetry.org | python3 -
# 
# Запустк установки зависимостей в новом проекте:
# poetry install
# 
# Запуск модуля внутри виртуального окружения:
# poetry run python -m zumrad_iis.main
# 
# 
# Инструмент для проверки и анализа кода на предмет импортов и
# сравнения их со списком установленных пакетов.
# 
# Установка:
# pip install deptry
# 
# Находясь в корневой папке вашего проекта (/home/dm/dev/python/zumrad/)
# выполните команду:
# deptry .
# 


[tool.poetry]
name = "zumrad_iis"
version = "0.2.1"
description = "Zumrad is a R&D project of a voice assistant that is a part of an Intelligent Information System"
readme = "README.md"
# license = {text = "MIT License"}
authors = [
    "Dimitrii Ch <im.chrm@gmail.com>",
]
requires-python = ">=3.11,<3.12"

packages = [{include = "zumrad_iis"}]

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.11"
pydub = "^0.25.1"
PyYAML = "^6.0.1"
sounddevice = "^0.4.7"
# Указываем Poetry использовать специальный репозиторий для CPU-версий torch
torch = {version = "^2.7.0", source = "pytorch_cpu"}
vosk = "^0.3.45"
numpy = "^2.3.1" # numpy = "^2.3.1" "2.1.2" "^1.26.4"
omegaconf = "^2.3.0"
deptry = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.deptry]
# Исключаем из сканирования папки и файлы, которые не являются частью
# основного исходного кода приложения.
exclude = [
    ".venv",
    "stt_models",
    "silero_models.py",
]

# Игнорируем определенные ошибки для конкретных зависимостей.
# DEP003: '...' imported but it is a transitive dependency.
# Мы говорим deptry, что знаем об этом и это нормально, так как мы используем
# эти пакеты напрямую.
per_rule_ignores = { "DEP003" = ["torch", "vosk", "sounddevice", "pydub", "PyYAML", "omegaconf"] }
